# tv.baivo-anyflix-v2

./: .coverage  .gitignore  package-lock.json
anime-backend/: .coverage  pyproject.toml  start.sh  test_youtbe.py
anime-backend/app/: config.py  dependencies.py  main.py
anime-backend/app/internal/: proxy.py
anime-backend/app/routers/: __init__.py  proxy.py  sources.py
anime-backend/lib/: __init__.py
anime-backend/lib/extractors/: dood_extractor.py  extract_any.py  filemoon_extractor.py  luluvdo_extractor.py  m3u8_extractor.py  vidmoly_extractor.py  voe_extractor.py  ytdlp_extractor.py
anime-backend/lib/models/: __init__.py  base.py  responses.py
anime-backend/lib/providers/: __init__.py  aniworld.py  base.py  serienstream.py
anime-backend/lib/services/: anime_service.py
anime-backend/lib/utils/: js_utils.py  logging_config.py  parser.py
anime-backend/lib/utils/cryptoaes/: deobfuscator.py
anime-backend/reference_data/: Episode 1 Staffel 1 von Dealing with Mikadono Sisters Is a Breeze _ AniWorld.to - Animes gratis legal online ansehen.html  aniworld_anime:stream:berserk-of-gluttony:staffel-1:episode-11.html
anime-backend/tests/: conftest.py  extractor_test_base.py
anime-backend/tests/extractors/: test_filemoon.py  test_vidmoly.py  test_vidoza.py
anime-backend/tests/unit/: __init__.py  test_extractors.py  test_normalization.py  test_providers.py
anime-player/: index.html  package-lock.json  package.json
anime-player/src/: App.css  App.jsx
anyflix-backend/: .env  .gitignore  .pre-commit-config.yaml  CACHING.md  LOGGING_GUIDE.md  Makefile  README.md  SETUP.md  demo_bullet_anime.py  docker-compose.yml  generate_openapi.py  improved_openapi_schema.json  lint.sh  main.py  mvp.txt  openapi.json  pyproject.toml  pytest.ini  run.sh  test_converter.py  test_youtube_extractor.py
anyflix-backend/app/: __init__.py  config.py  dependencies.py  main.py
anyflix-backend/app/internal/: __init__.py  admin.py  proxy.py
anyflix-backend/app/routers/: proxy.py  series.py  sources.py
anyflix-backend/examples/: README.md  anilist_example.py  anilist_service_example.py  api_integration_example.py  test_anilist_simple.py
anyflix-backend/lib/extractors/: __init__.py  base.py  dood_extractor.py  extract_any.py  filemoon_extractor.py  jwplayer_extractor.py  luluvdo_extractor.py  m3u8_extractor.py  speedfiles_extractor.py  vidmoly_extractor.py  vidoza_extractor.py  voe_extractor.py  ytdlp_extractor.py
anyflix-backend/lib/models/: ARCHITECTURE.md  COMPARISON.md  README.md  __init__.py  anilist.py  base.py  enhanced.py  external.py  media.py  mixins.py  responses.py  tmdb.py
anyflix-backend/lib/providers/: __init__.py  aniworld.py  base.py  serienstream.py
anyflix-backend/lib/services/: __init__.py  anilist_service.py  anime_service.py  example_search_multi_response.json  matching_service.py  media_service.py  metadata_service.py  response_converter.py  series_converter.py  tmdb_service.py
anyflix-backend/lib/utils/: __init__.py  base64_utils.py  caching.py  client.py  external_data_converters.py  helpers.py  js_utils.py  logging_config.py  normalization.py  parser.py  string_utils.py  trailer_utils.py  url_utils.py
anyflix-backend/lib/utils/cryptoaes/: __init__.py  crypto_aes.py  deobfuscator.py  js_unpacker.py
anyflix-backend/reference_data/: Episode 1 Staffel 1 von Dealing with Mikadono Sisters Is a Breeze _ AniWorld.to - Animes gratis legal online ansehen.html  aniworld.to:anime:stream:bulletbullet.html  aniworld_anime:stream:berserk-of-gluttony:staffel-1:episode-11.html  serienstream.to:serie:stream:alien-earth.html  serienstream.to:serie:stream:alien-earth:staffel-1:episode-1.html
anyflix-backend/tests/: __init__.py  conftest.py
anyflix-backend/tests/extractors/: __init__.py  test_voe.py  test_ytdlp.py
anyflix-backend/tests/integration/: __init__.py  comprehensive_test_results.json  test_api.py  test_comprehensive_endpoints.py  test_hierarchical_api.py  test_results.json  test_sources_endpoints.py
anyflix-backend/tests/unit/: __init__.py  test_anilist_service.py  test_anime_service.py  test_extractors.py  test_models.py  test_normalization.py  test_providers.py
anyflix-player/: .gitignore  README.md  TMDB_SWR_MIGRATION.md  TYPE_VALIDATION_FIX.md  index.html  package-lock.json  package.json  tailwind.config.ts
anyflix-player/scripts/: update-api-schema.sh
anyflix-player/src/: App.tsx  index.css
anyflix-player/src/components/: Hero.tsx  MediaCard.tsx  MediaInfo.tsx  MediaRow.tsx  MediaRowNavigationButton.tsx  MovieCard.tsx  MovieRow.tsx  Navbar.tsx  SearchModal.tsx  VideoTrailer.tsx  actionButtons.tsx  typography.tsx
anyflix-player/src/components/media/: MediaCard.tsx  MediaInfo.tsx  MediaRow.tsx
anyflix-player/src/components/search/: SearchInput.tsx  SearchModal.tsx
anyflix-player/src/hooks/: useAnime.ts  useTMDB.ts  useWebOSFocus.ts
anyflix-player/src/lib/: webos-focus.ts
anyflix-player/src/lib/api/: client.ts  hooks.ts  openapi.json  test.tsx  types.d.ts
anyflix-player/src/pages/: AnimeDemo.tsx  Aniworld.tsx  Auth.tsx  Home.tsx
anyflix-player/src/services/: README.md  anime.ts  tmdb.ts
anyflix-player/src/types/: README.md  anime.ts  index.ts  media.ts  movie.ts  zod-responses.ts
anyflix-player/src/types/schemas/: anilist.ts  base.ts  tmdb.ts
